syntax = "proto3";
package CarAuto.Order;
option csharp_namespace = "CarAuto.Protos.Order";

import "Order/order.proto";
import "google/protobuf/empty.proto";

message CreateOrderRequest
{
	Order order = 1;
}

message CreateOrderResponse
{
	string id = 1;
}

message GetAllOrdersResponse
{
	repeated Order orders = 1;
}

message DeleteOrderRequest
{
	string id = 1;
}

message UpdateOrderRequest
{
	Order order = 1;
}

message GetUserOrdersResponse
{
	repeated Order orders = 1;
}

service OrderService
{
	rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
	rpc GetAllOrders (google.protobuf.Empty) returns (GetAllOrdersResponse);
	rpc DeleteOrder (DeleteOrderRequest) returns (google.protobuf.Empty);
	rpc UpdateOrder (UpdateOrderRequest) returns (google.protobuf.Empty);
	rpc GetUserOrders (google.protobuf.Empty) returns (GetUserOrdersResponse);
}